# AI_Agent_Leads_Revenue

./: .env.example  .gitignore  LICENSE  PROOF_OF_RESULTS.md  README.md  docker-compose.yml  llms.txt  pyproject.toml
.github/agents/: agents.md
.github/workflows/: docs-gate.yml
docs/ai/: CHANGELOG.md  COMPLETE_PHASE1_VERIFICATION.md  DATA_EXTRACTION_FINAL_STATUS.md  DATA_EXTRACTION_IMPROVEMENTS_SUMMARY.md  E2E_REAL_PERMITS_TEST.md  E2E_VERIFICATION.md  ENRICHMENT_EMAIL_FIX_PLAN.md  ENRICHMENT_EMAIL_FIX_SUMMARY.md  EXTRACTION_IMPROVEMENTS_EVALUATION.md  EXTRACTION_IMPROVEMENTS_TEST_RESULTS.md  EXTRACTION_PROGRESS_SUMMARY.md  FULL_PIPELINE_SUCCESS.md  FULL_PIPELINE_TEST_RESULTS.md  GOOGLE_CUSTOM_SEARCH_SETUP.md  HUNTER_INTEGRATION.md  HUNTER_SETUP_COMPLETE.md  HUNTER_TEST_RESULTS.md  HYBRID_ENRICHMENT_STRATEGY.md  MIGRATION_HANDOFF.md  NEXT_STEPS_COMPLETE_SUMMARY.md  PHASE_1_3_COMPLETE.md  PHASE_1_3_VERIFICATION.md  PHASE_1_4_1_COMPLETE.md  PHASE_1_4_1_TEST_RESULTS.md  PHASE_1_4_2_1000_PERMITS_PROOF.md  PHASE_1_4_2_1000_PERMITS_TEST.md  PHASE_1_4_2_COMPLETE.md  PHASE_1_4_2_MULTI_CITY_PROOF.md  PHASE_1_4_2_REAL_PORTAL_TEST_RESULTS.md  PHASE_1_4_2_SCALABILITY_PROOF.md  PHASE_1_4_2_SCALABILITY_TEST.md  PHASE_1_4_3_COMPLETE.md  PHASE_1_4_4_COMPLETE.md  PHASE_1_4_4_FIXED.md  PHASE_1_4_5_COMPLETE.md  PHASE_1_4_FULL_TEST_RESULTS.md  PHASE_1_4_PHASE_2_INTEGRATION_TEST.md  PHASE_2_1_TESTING.md  PHASE_2_1_WITHOUT_DOCKER.md  PHASE_2_2_COMPLETE.md  (+19 more)
scripts/: README.md  docs_gate.py  run_scraper_fixture.py  run_scraper_job.py  seed_knowledge_graph.py
src/: __init__.py
(+244 files in other folders)
