[tool.poetry]
name = "aoro"
version = "0.1.0"
description = "Autonomous Outcome-Based Revenue Orchestrator (AORO) for compliance-driven industrial services."
authors = ["AORO Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Orchestration / LLMs
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
langsmith = "^0.1.0"
openai = "^1.0.0"

# MCP / Web
fastmcp = "^0.1.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }

# Data / IO
neo4j = "^5.0.0"
pinecone-client = "^3.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"

# Scraping / Scheduling
playwright = "^1.48.0"
apscheduler = "^3.10.0"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
mypy = "^1.8.0"
types-python-dateutil = "^2.9.0.20240316"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


